--- a/ContosoUniversity/Views/Courses/Edit.cshtml
+++ b/ContosoUniversity/Views/Courses/Edit.cshtml
@@ -78,5 +78,6 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 }
