--- a/ContosoUniversity/Views/Instructors/Edit.cshtml
+++ b/ContosoUniversity/Views/Instructors/Edit.cshtml
@@ -89,5 +89,6 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 }
